mit a jour globals de composants

--- a/src/style/component/_cards.scss
+++ b/src/style/component/_cards.scss
@@ -3,10 +3,10 @@
   grid-template-columns: repeat(4, 1fr);
   justify-content: center;
   gap: 30px;
-  padding: 0 50px;
+  padding: 0px 0px 0px 50px;
 
   .card-list {
-    width: 100%;
+    width: 80%;
     margin-bottom: 50px;
 
     img {
@@ -25,6 +25,8 @@
 
     h2 {
       text-align: center;
+      color: #fff;
+      font-size: 18px;
     }
   }
 }
