--- a/src/style/component/_portfolio.scss
+++ b/src/style/component/_portfolio.scss
@@ -1,96 +1,125 @@
-.headline{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-//    margin:5rem 15rem;
+.headline {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+
+  // Animtion
+  $bgWidth: 10000px;
+  background: linear-gradient(
+    to right,
+    #0d2533 0%,
+    #143446 19%,
+    #0d2533 40%,
+    #214358 60%,
     
-   p{
-      width: 50%;
-      display: flex;
-      text-align: center;
-      margin: 0px 28rem;
-   }
-   img{
-    width: 100%;
-    height: 400px;
-   margin-top: 100px;
-    object-fit: cover;
-   }
-   
-   }
-   section.competences{
+    #484130 83%,
+    #0d2533 100%
+  );
+  background-size: $bgWidth 100%;
+  animation: bg 15s linear infinite;
+
+  @keyframes bg {
+    0% {
+      background-position-x: 0;
+    }
+
+    100% {
+      background-position-x: $bgWidth;
+    }
+  }
+  h1 {
     display: flex;
     justify-content: center;
-    align-items: center;
-    background-color: rgb(223, 233, 228);
-    h1{
-        display: flex;
-        justify-content: center;
-        margin-top:50px ;
-    }
-    p{
-        display: flex;
+    font-size: 35px;
+  }
+  h2{
+    font-size: 25px;
+  }
+  p {
+    display: flex;
     justify-content: center;
-    color: black;
+    color: rgb(255, 255, 255);
     font-size: 20px;
     margin: 2% 15%;
     align-items: center;
-    }
-    .logos{
-        display: grid;
-        grid-template-columns: repeat(3, 2fr);
-        justify-content: center;
-        align-items: center;
-        justify-items: center;
-        align-content: center;
-        gap: 50px;
-        margin: 10% 25%;
-    }
-    img{
-        width: 100%;
-        height: 100%;
-        border-radius: 100%;
-        border: 6px solid;
-        padding: 2%;
-    }
-    }
-  
-   
-   
+    text-align: center;
+    line-height: 30px;
+    
+  }
 
-.p-title h1{
+ 
+  img {
+    width: 100%;
+    height: 400px;
+    margin-top: 100px;
+    object-fit: cover;
+  }
+}
+section.competences {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #0d2533;
+  height: 100vh;
+
+  .logos {
+    display: grid;
+    grid-template-columns: repeat(3, 2fr);
+    justify-content: center;
+    align-items: center;
+    justify-items: center;
+    align-content: center;
+    gap: 50px;
+    margin: 10% 25%;
+  }
+  img {
+    width: 70%;
+    height: 100%;
+    border-radius: 100%;
+    border: 6px solid;
+    padding: 2%;
+  }
+  h1, p{
     display: flex;
     justify-content: center;
-    margin: 8rem 0 7rem;
-    
+    text-align: center;
+  }
+  p{
+    width: 49%;
+    margin-left: 25%;
+    font-size: 20px;
+    line-height: 25px;
+    color: #fff;
 }
-
-
-@media screen and (max-width: 768px) {
-    .headline {
-        
-        margin: 0 20px;
-        h2{
-            text-align: center;
-        }
-        p{
-            width: 100%;
-        }
-        img{
-            border-radius: 10px;
-        }
-    }
-    .p-title h1{
-    
-        margin: 0 0 3rem;
-        
-    }
   }
 
 
+.gallerie  {
+    // height: 100vh;
+    h1{
+        display: flex;
+        justify-content: center;
+        
+    }
+  
+}
 
-
-
-
-
+@media screen and (max-width: 768px) {
+  .headline {
+    margin: 0 20px;
+    h2 {
+      text-align: center;
+    }
+    p {
+      width: 100%;
+    }
+    img {
+      border-radius: 10px;
+    }
+  }
+  .p-title h1 {
+    margin: 0 0 3rem;
+  }
+}
