--- a/src/style/component/_footer.scss
+++ b/src/style/component/_footer.scss
@@ -7,12 +7,13 @@ footer {
   gap: 50px;
 
   padding: 20px;
-  background-color: rgb(5, 44, 22);
+  background-color:#fff;
   margin: auto;
- a{
+ a,p{
     text-decoration: none;
-    color: #fff;
+    color: #0d2533;
  }
+
 
 }
 
