--- a/src/style/component/_form.scss
+++ b/src/style/component/_form.scss
@@ -2,11 +2,21 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100vh;
+    h1, h2{
+      font-size: 20px;
+      margin: 0;
+    }
+    h1{
+      padding-top: 50px;
+    }
     
     p{
-        width: 35.5%;
+        width: 49.5%;
         text-align: center;
-        font-size: 20px;
+        font-size: 18px;
+        color: #fff;
+        padding-top: 15px;
     }
     
     input, textarea, button{
