--- a/src/style/component/_service.scss
+++ b/src/style/component/_service.scss
@@ -21,20 +21,21 @@
     text-align: start;
     line-height: 1.3;
     font-size: 20px;
-    background-color: rgb(5, 44, 22);
+    background-color: #fff;
     text-align: center; 
     padding: 50px;
     border-radius: 10px;
     margin-bottom: 80px;
+    i{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-bottom: 30px;
+      font-size: 30px;
+      color: DarkGoldenrod;
+    }
     
   }
-  i{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 30px;
-    font-size: 30px;
-    color: DarkGoldenrod;
-  }
+  
 
 }
