--- a/src/style/utils/_global.scss
+++ b/src/style/utils/_global.scss
@@ -2,9 +2,10 @@ body{
     margin: 0;
     padding: 0;
     color: DarkGoldenrod;
-    background: radial-gradient(circle at 10% 20%, rgb(98, 114, 128) 0%, rgb(52, 63, 51) 90.1%);
+    background: #0d2533;
+    // background: radial-gradient(circle at 10% 20%, rgb(98, 114, 128) 0%, rgb(52, 63, 51) 90.1%);
 }
 p{
-    color: #ffff;
+    // color: #ffff;
 }
 
