--- a/src/style/component/_form.scss
+++ b/src/style/component/_form.scss
@@ -54,14 +54,30 @@
           flex-direction: column;
           align-items: center;
           text-align: center;
-          padding: 0 20px;
+          padding: 0 20px 30px;
           p {
             width: 65%;
               }
               input, textarea{
-                width: 60%;
+                width: 80%;
+                height: 40px;
               }
+              textarea{
+                height: 30%;
+                padding: 5px;
+                font-size: 14px;
+            }
+            input{
+              font-size: 14px;
+              padding: 5px;
+            }
+            button{
+             
+              width: 83%;
+              padding: 3px;
+            }
         }
+      
        
       }
       
