--- a/src/style/component/_service.scss
+++ b/src/style/component/_service.scss
@@ -1,5 +1,5 @@
 .container-service {
-    max-width: 1140px;
+    // max-width: 1140px;
     margin-inline: auto;
     padding-block: 70px;
     display: flex;
