--- a/src/style/component/_cards.scss
+++ b/src/style/component/_cards.scss
@@ -14,13 +14,16 @@
       max-width: 100%;
       height: 100%;
       min-height: 75%;
-      max-height: 348px;
+      max-height: 180px;
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
       border-radius: 15px;
       border: white solid 2px;
       object-fit: cover;
+    }
+    .image-modale{
+      max-height: 400px;
     }
 
     h2 {
@@ -29,6 +32,7 @@
       font-size: 18px;
     }
   }
+
 }
 
 @media screen and (max-width: 768px) {
