--- a/src/style/component/modale.scss
+++ b/src/style/component/modale.scss
@@ -69,13 +69,7 @@
         font-size: 15px;
       }
 
-      img {
-        width: 100%;
-        height: auto;
-        max-height: 326px;
-        min-height: auto;
-        object-fit: cover;
-      }
+ 
     }
     .close-modal {
       top: 3%;
@@ -83,6 +77,13 @@
       font-size: 10px;
     }
   }
+}
+img  .image-modale  {
+  width: 100%;
+  height: auto;
+  max-height: 326px;
+  min-height: auto;
+  object-fit: cover;
 }
 
 @media screen and (max-width: 1028px) {
