--- a/src/style/component/_portfolio.scss
+++ b/src/style/component/_portfolio.scss
@@ -102,6 +102,7 @@ section.competences {
     h1{
         display: flex;
         justify-content: center;
+        margin-top: 30px;
         
     }
   
