reconstruction service en toggle

--- a/src/style/component/_cards.scss
+++ b/src/style/component/_cards.scss
@@ -21,6 +21,7 @@
       border-radius: 15px;
       border: white solid 2px;
       object-fit: cover;
+      cursor: pointer;
     }
     .image-modale{
       max-height: 400px;
