--- a/src/style/component/_footer.scss
+++ b/src/style/component/_footer.scss
@@ -5,24 +5,20 @@ footer {
   justify-content: center;
   text-align: center;
   gap: 50px;
-
-  padding: 20px;
-  background-color:#fff;
-  margin: auto;
- a,p{
+   padding: 20px;
+  background-color: #fff;
+  margin-bottom: auto;
+  a,
+  p {
     text-decoration: none;
     color: #0d2533;
- }
-
-
+  }
 }
 
-
-
 @media screen and (max-width: 768px) {
-   footer{
-      flex-direction: column;
-      gap: 0;
-      padding: 0;
-   }
- }
+  footer {
+    flex-direction: column;
+    gap: 0;
+    padding: 0;
+  }
+}
