--- a/src/style/component/_cards.scss
+++ b/src/style/component/_cards.scss
@@ -4,6 +4,17 @@
   justify-content: center;
   gap: 30px;
   padding: 0px 0px 0px 50px;
+  animation: fadeInAnimation ease 4s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  @keyframes fadeInAnimation {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+    }
 
   .card-list {
     width: 80%;
