--- a/src/style/component/_form.scss
+++ b/src/style/component/_form.scss
@@ -1,84 +1,86 @@
-.container{
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  h1,
+  h2 {
+    font-size: 20px;
+    margin: 0;
+  }
+  h1 {
+    padding-top: 50px;
+  }
+
+  p {
+    width: 49.5%;
+    text-align: center;
+    font-size: 18px;
+    color: #fff;
+    padding-top: 15px;
+  }
+
+  input,
+  textarea,
+  button {
+    width: 35%;
+    height: 40px;
+    margin: 15px;
+    border-radius: 10px;
+    border: solid 2px DarkGoldenrod;
+    color: DarkGoldenrod;
+    font-size: 15px;
+    padding: 10px;
+  }
+  textarea {
+    height: 150px;
+    padding: 10px;
+  }
+  button {
+    background-color: #fff;
+    color: DarkGoldenrod;
+    font-size: 20px;
+    border: solid 2px DarkGoldenrod;
+    margin: 10px;
+    height: 60px;
+    width: 37%;
+  }
+  span {
+    margin-bottom: 50px;
+  }
+}
+.message-success {
+  display: flex;
+  justify-content: center;
+}
+
+@media screen and (max-width: 768px) {
+  .container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
-    h1, h2{
-      font-size: 20px;
-      margin: 0;
+    text-align: center;
+    padding: 0 20px 30px;
+    p {
+      width: 65%;
     }
-    h1{
-      padding-top: 50px;
+    input,
+    textarea {
+      width: 80%;
+      height: 40px;
     }
-    
-    p{
-        width: 49.5%;
-        text-align: center;
-        font-size: 18px;
-        color: #fff;
-        padding-top: 15px;
+    textarea {
+      height: 30%;
+      padding: 5px;
+      font-size: 14px;
     }
-    
-    input, textarea, button{
-        width: 35%;
-        height: 50px;
-        margin: 20px;
-        border-radius: 10px;
-        border: solid 2px  DarkGoldenrod ;
-        color: DarkGoldenrod;
-        font-size: 15px;
+    input {
+      font-size: 14px;
+      padding: 5px;
     }
-    textarea{
-        height: 200px;
+    button {
+      width: 83%;
+      padding: 3px;
     }
-    button{
-       background-color: #fff;
-        color: DarkGoldenrod;
-        font-size: 20px;
-        border: solid 2px  DarkGoldenrod ;
-    }
-   span{
-    margin-bottom: 50px;
-   }
-  
-  
-    }
-    .message-success{
-        display: flex;
-        justify-content: center;
-       }
-
-       @media screen and (max-width: 768px) {
-        .container{
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          text-align: center;
-          padding: 0 20px 30px;
-          p {
-            width: 65%;
-              }
-              input, textarea{
-                width: 80%;
-                height: 40px;
-              }
-              textarea{
-                height: 30%;
-                padding: 5px;
-                font-size: 14px;
-            }
-            input{
-              font-size: 14px;
-              padding: 5px;
-            }
-            button{
-             
-              width: 83%;
-              padding: 3px;
-            }
-        }
-      
-       
-      }
-      
-   
+  }
+}
