--- a/src/style/component/_cards.scss
+++ b/src/style/component/_cards.scss
@@ -9,12 +9,12 @@
   animation-fill-mode: forwards;
   @keyframes fadeInAnimation {
     0% {
-        opacity: 0;
+      opacity: 0;
     }
     100% {
-        opacity: 1;
+      opacity: 1;
     }
-    }
+  }
 
   .card-list {
     width: 80%;
@@ -23,9 +23,6 @@
     img {
       width: 100%;
       max-width: 100%;
-      height: 100%;
-      min-height: 75%;
-      max-height: 180px;
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -34,8 +31,8 @@
       object-fit: cover;
       cursor: pointer;
     }
-    .image-modale{
-      max-height: 400px;
+    .image-modale {
+      max-height: 350px;
     }
 
     h2 {
@@ -44,7 +41,6 @@
       font-size: 18px;
     }
   }
-
 }
 
 @media screen and (max-width: 768px) {
@@ -54,11 +50,8 @@
     padding: 0 20px;
   }
 }
-@media screen and (max-width: 1028px) {
-  .card-container {
-    display: flex;
-    flex-direction: column;
-    img {
-    }
+@media screen and (min-width: 768px) {
+  .image-modale {
+    max-height: 200px;
   }
 }
