--- a/src/style/component/_header.scss
+++ b/src/style/component/_header.scss
@@ -28,11 +28,12 @@ header {
 
 @media screen and (max-width: 768px) {
   header{
-
+ 
     .navbar{
-    
+   
       ul a{
         font-size: 20px;
+      margin: 15px 10px 15px;
 
       }
     }
