--- a/src/style/component/_cards.scss
+++ b/src/style/component/_cards.scss
@@ -18,6 +18,7 @@
 
   .card-list {
     width: 80%;
+    height: 50%;
     margin-bottom: 50px;
 
     img {
@@ -48,10 +49,5 @@
     display: flex;
     flex-direction: column;
     padding: 0 20px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .image-modale {
-    max-height: 200px;
   }
 }
