--- a/src/style/component/_portfolio.scss
+++ b/src/style/component/_portfolio.scss
@@ -29,6 +29,7 @@
   p {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     color: rgb(255, 255, 255);
     font-size: 20px;
     margin: 2% 15%;
@@ -36,7 +37,9 @@
     text-align: center;
     line-height: 30px;
     position: absolute;
-    bottom: 35%;
+    bottom: 18%;
+    gap: 50px;
+ 
   }
 }
 
@@ -90,17 +93,17 @@ section.competences {
     background: none;
 
     h1 {
-      top: 16%;
+      top: 6%;
     }
     h2 {
       text-align: center;
-      top: 35%;
+      top: 29%;
       margin: 0 15px 0 15px;
     }
     p {
       width: 91%;
       font-size: 18px;
-      bottom: 16%;
+      bottom: 10%;
     }
     img {
       border-radius: 10px;
