--- a/src/style/utils/_global.scss
+++ b/src/style/utils/_global.scss
@@ -3,7 +3,7 @@ body{
     padding: 0;
     color: DarkGoldenrod;
     background: #0d2533;
-    // background: radial-gradient(circle at 10% 20%, rgb(98, 114, 128) 0%, rgb(52, 63, 51) 90.1%);
+    text-decoration: none;
 }
 
 
