--- a/src/style/component/_portfolio.scss
+++ b/src/style/component/_portfolio.scss
@@ -86,6 +86,21 @@ section.competences {
     justify-content: center;
     margin-top: 30px;
   }
+  .Portfolio-filter{
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+    gap: 20px;
+    margin-top: 30px;
+    button{
+      padding: 10px 20px;
+      color: DarkGoldenrod;
+      border-radius: 10px;
+      border: none;
+      justify-content: center;
+      cursor: pointer;
+    }
+  }
 }
 
 @media screen and (max-width: 768px) {
