style retravailler sur le composant tagButon

--- a/src/style/component/_portfolio.scss
+++ b/src/style/component/_portfolio.scss
@@ -86,7 +86,7 @@ section.competences {
     justify-content: center;
     margin-top: 30px;
   }
-  .Portfolio-filter{
+  .filter-btn{
     display: flex;
     justify-content: center;
     cursor: pointer;
